--- a/styles/includes/_stage.scss
+++ b/styles/includes/_stage.scss
@@ -25,8 +25,6 @@
 	}
 
 	&__overlap {
-		@include default-animation(background-color);
-
 		background-color: $color-primary--white;
 		bottom: -16rem;
 		height: 24rem;
